# EEE

./: .gitignore  LICENSE  README.md  greek_nouns.py  greek_utils.py  greek_verbs.py  pyproject.toml
modern_greek_eee/: __init__.py  greek_nouns.py  greek_utils.py  greek_verbs.py
