[project]
name = "modern-greek-eee"
version = "0.1.0"
description = "Greek learning tools for Marimo"
dependencies = [
    "marimo>=0.19.4",
    "modern-greek-inflexion==2.0.7",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modern_greek_eee"]
